{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 142,
  "lineage": "1062e13b-8abf-462f-6680-d22554691a76",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:network-acl/acl-0d27e58ab94f90462",
            "default_network_acl_id": "acl-0d27e58ab94f90462",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d27e58ab94f90462",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "672466453011",
            "subnet_ids": [
              "subnet-04b9ddfd45b061d28",
              "subnet-079257ce0510dd01a",
              "subnet-079f9352f275ddab4",
              "subnet-0bc1e1a41487702e8"
            ],
            "tags": {
              "Name": "cheap-eks-vpc-default",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-default",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:route-table/rtb-01147dfecfda3afd9",
            "default_route_table_id": "rtb-01147dfecfda3afd9",
            "id": "rtb-01147dfecfda3afd9",
            "owner_id": "672466453011",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "cheap-eks-vpc-default",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-default",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:security-group/sg-0de931d7ec1077fe8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0de931d7ec1077fe8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "672466453011",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cheap-eks-vpc-default",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-default",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:internet-gateway/igw-031f8229b9b87d418",
            "id": "igw-031f8229b9b87d418",
            "owner_id": "672466453011",
            "tags": {
              "Name": "cheap-eks-vpc",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-031f8229b9b87d418",
            "id": "r-rtb-0fe5b8e40021874c11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe5b8e40021874c1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:route-table/rtb-0c60d1d2a950156aa",
            "id": "rtb-0c60d1d2a950156aa",
            "owner_id": "672466453011",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cheap-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:route-table/rtb-0deb409230776065c",
            "id": "rtb-0deb409230776065c",
            "owner_id": "672466453011",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cheap-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:route-table/rtb-0fe5b8e40021874c1",
            "id": "rtb-0fe5b8e40021874c1",
            "owner_id": "672466453011",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cheap-eks-vpc-public",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-public",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd907218c9156b62",
            "route_table_id": "rtb-0c60d1d2a950156aa",
            "subnet_id": "subnet-0bc1e1a41487702e8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b984e1df1a27c3b",
            "route_table_id": "rtb-0deb409230776065c",
            "subnet_id": "subnet-079f9352f275ddab4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed735dfea6f6c815",
            "route_table_id": "rtb-0fe5b8e40021874c1",
            "subnet_id": "subnet-079257ce0510dd01a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05658a2904715c8a8",
            "route_table_id": "rtb-0fe5b8e40021874c1",
            "subnet_id": "subnet-04b9ddfd45b061d28"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:subnet/subnet-0bc1e1a41487702e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc1e1a41487702e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672466453011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheap-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:subnet/subnet-079f9352f275ddab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079f9352f275ddab4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672466453011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheap-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:subnet/subnet-079257ce0510dd01a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079257ce0510dd01a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672466453011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheap-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:subnet/subnet-04b9ddfd45b061d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b9ddfd45b061d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672466453011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cheap-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/cheap-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0aff1523403c6d766"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672466453011:vpc/vpc-0aff1523403c6d766",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d27e58ab94f90462",
            "default_route_table_id": "rtb-01147dfecfda3afd9",
            "default_security_group_id": "sg-0de931d7ec1077fe8",
            "dhcp_options_id": "dopt-04af11f99774cbf03",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aff1523403c6d766",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01147dfecfda3afd9",
            "owner_id": "672466453011",
            "tags": {
              "Name": "cheap-eks-vpc",
              "kubernetes.io/cluster/cheap-eks": "shared"
            },
            "tags_all": {
              "Name": "cheap-eks-vpc",
              "kubernetes.io/cluster/cheap-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}